--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
-*{margin: 0; padding: 0;}
-header{width: 100%;height: auto; background: aliceblue; padding: 20px 0; text-align: center;}
-section{width: 100%; height: auto; background: yellowgreen; padding: 20px 0; text-align: center;}
-section h2{font-size: 20px;}
-footer{width: 100%; height: auto; background: thistle; padding: 20px 0; text-align: center;}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ol,
+ul{list-style: none;}
+
+.containter{width: 100%; height: auto; display: flex; align-items: center; justify-content: center;}
+.loader{width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center;}
+.movies{width: 100%; height: auto; display: flex; flex-direction: row; flex-wrap: wrap; padding: 10px; }
+.movies .movie{width: calc(20% - 10px); display: flex; flex-direction: column; padding: 10px; align-items: center; justify-content: center; border: 1px solid; border-radius: 5px; margin: 5px;}
+.movies .movie>img{width: 200px;}
+.movies .movie .movie_data{width: 100%;}
+.movies .movie .movie_data .movie_summary{}
+.movies .movie .movie_data>ul{display: flex;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;}
+  .movies .movie .movie_data>ul>li{margin-right: 3px;}
