04/07 리액트 영화 네비게이션 작성, 디테일 페이지 + 제목 출력 성공

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 ol,
 ul{list-style: none;}
 
-.containter{width: 100%; height: auto; display: flex; align-items: center; justify-content: center;}
+.containter{max-width: 1200px; height: auto; display: flex; align-items: center; justify-content: center; }
 .loader{width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center;}
 .movies{width: 100%; height: auto; display: flex; flex-direction: row; flex-wrap: wrap; padding: 10px; }
 .movies .movie{width: calc(20% - 10px); display: flex; flex-direction: column; padding: 10px; align-items: center; justify-content: center; border: 1px solid; border-radius: 5px; margin: 5px;}
